force-app/main/default/objects/EYI_SAP_Report__c/EYI_SAP_Report__c.object-meta.xml
<CustomObject>
    <description>Used for SAP report</description>
    <label>Collection Report</label>
    <nameField>
        <label>SAP Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>