force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Actual_Basic_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Basic_Bill_Amount__c</fullName>
    <label>Actual Basic Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>