force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_After_Deduction_Basic_Bill__c.field-meta.xml
<CustomField>
    <fullName>EYI_After_Deduction_Basic_Bill__c</fullName>
    <label>After Deduction Basic Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>