force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Ageing_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ageing_Delay_Days__c</fullName>
    <label>Ageing Delay Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>