force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Agreement_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Handover_Date__c</fullName>
    <label>Agreement Handover Date</label>
    <type>Date</type>
</CustomField>