force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Agreement_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Registration_Number__c</fullName>
    <label>Agreement Registration Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>