force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Billed_Amt_Debit_Note_Amt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Billed_Amt_Debit_Note_Amt__c</fullName>
    <label>Billed Amt + Debit Note Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>