force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_BRACKET1__c.field-meta.xml
<CustomField>
    <fullName>EYI_BRACKET1__c</fullName>
    <label>0-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>