force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_BRACKET3__c.field-meta.xml
<CustomField>
    <fullName>EYI_BRACKET3__c</fullName>
    <label>60-90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>