force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Building_Name__c</fullName>
    <label>Building Name</label>
    <type>TextArea</type>
</CustomField>