force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>