force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Cancellation_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Initiated_By__c</fullName>
    <label>Cancellation Initiated By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>