force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Carpet_Area__c</fullName>
    <label>Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>