force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Code__c</fullName>
    <label>Company Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>