force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>