force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_CRM_Mapped__c.field-meta.xml
<CustomField>
    <fullName>EYI_CRM_Mapped__c</fullName>
    <label>CRM Mapped</label>
    <length>20</length>
    <type>Text</type>
</CustomField>