force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Currency__c.field-meta.xml
<CustomField>
    <fullName>EYI_Currency__c</fullName>
    <label>Currency</label>
    <length>16</length>
    <type>Text</type>
</CustomField>