force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>