force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>