force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Document_Type__c</fullName>
    <label>Document Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>