force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>