force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Final_Total__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Total__c</fullName>
    <label>Final Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>