force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Flat__c.field-meta.xml
<CustomField>
    <fullName>EYI_Flat__c</fullName>
    <label>Flat</label>
    <length>20</length>
    <type>Text</type>
</CustomField>