force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Franking_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Franking_Date__c</fullName>
    <label>Franking Date</label>
    <type>Date</type>
</CustomField>