force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>