force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Material__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material__c</fullName>
    <label>Material</label>
    <length>25</length>
    <type>Text</type>
</CustomField>