force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Description__c</fullName>
    <label>Material Description</label>
    <type>TextArea</type>
</CustomField>