force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Number__c</fullName>
    <label>Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>