force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Not_Due__c.field-meta.xml
<CustomField>
    <fullName>EYI_Not_Due__c</fullName>
    <label>Not Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>