force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Payment_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Project__c</fullName>
    <label>Payment Project</label>
    <length>20</length>
    <type>Text</type>
</CustomField>