force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>