force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Plant__c.field-meta.xml
<CustomField>
    <fullName>EYI_Plant__c</fullName>
    <label>Plant</label>
    <length>20</length>
    <type>Text</type>
</CustomField>