force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Profit_Center_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profit_Center_Description__c</fullName>
    <label>Profit Center Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>