force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Profit_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profit_Center_Name__c</fullName>
    <label>Profit Center Name</label>
    <type>TextArea</type>
</CustomField>