force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Property_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Property_Tax_Number__c</fullName>
    <label>Property Tax Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>