force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Recon_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recon_Account__c</fullName>
    <label>Recon Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>