force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Recon_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recon_Account_Description__c</fullName>
    <label>Recon Account Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>