force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Ref_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ref_Doc_No__c</fullName>
    <label>Ref Doc No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>