force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Region__c.field-meta.xml
<CustomField>
    <fullName>EYI_Region__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>