force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Region_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Region_Description__c</fullName>
    <label>Region Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>