force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Rejection__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rejection__c</fullName>
    <label>Rejection</label>
    <length>30</length>
    <type>Text</type>
</CustomField>