force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Saleable_Area__c</fullName>
    <label>Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>