force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Deed_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Deed_Number__c</fullName>
    <label>Sales Deed Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>