force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Document_Number__c</fullName>
    <label>Sales Document Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>