force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>