force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Order_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Order_Type_Description__c</fullName>
    <label>Sales Order Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>