force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Org__c</fullName>
    <label>Sales Org.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>