force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Org_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Org_Description__c</fullName>
    <label>Sales Org Description</label>
    <type>TextArea</type>
</CustomField>