force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Type__c</fullName>
    <label>Sales Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>