force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Segment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Segment__c</fullName>
    <label>Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>