force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_SO_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>EYI_SO_Line_Item__c</fullName>
    <label>SO Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>