force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>