force-app/main/default/objects/EYI_SAP_Report__c/fields/EYI_Total_Consideration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Consideration__c</fullName>
    <label>Total Consideration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>