force-app/main/default/objects/EYI_SAP_Report__c/recordTypes/EYI_SAP_Outstanding_Report.recordType-meta.xml
<RecordType>
    <fullName>EYI_SAP_Outstanding_Report</fullName>
    <active>true</active>
    <label>SAP Outstanding Report</label>
</RecordType>