force-app/main/default/objects/EYI_SAP_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>EYI_Sales_Org__c</columns>
    <columns>EYI_Plant__c</columns>
    <columns>EYI_Outstanding_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>