force-app/main/default/objects/EYI_SAP_Report__c/listViews/EYI_SAP_Outstanding_Report.listView-meta.xml
<ListView>
    <fullName>EYI_SAP_Outstanding_Report</fullName>
    <columns>NAME</columns>
    <columns>EYI_Customer_Name__c</columns>
    <columns>EYI_Distribution_Channel__c</columns>
    <columns>EYI_Outstanding_Amount__c</columns>
    <columns>EYI_Material__c</columns>
    <columns>EYI_Material_Number__c</columns>
    <columns>EYI_Material_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EYI_SAP_Report__c.EYI_SAP_Outstanding_Report</value>
    </filters>
    <label>SAP Outstanding Report</label>
</ListView>